[package]
name = "rust-hive"
version = "0.1.0"
edition = "2021"
authors = ["Eric Chubb"]
license = "MIT"
description = "A Rust library for Windows Registry access with SQLite caching"
repository = "https://github.com/ericcdub/rust-hive"
keywords = ["windows", "registry", "cache", "sqlite"]
categories = ["os::windows-apis", "caching"]
readme = "README.md"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
regex = "1"
rayon = "1.10"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.59", features = [
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_Security",
] }
